# pythonProject9

./: .flake8  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py  api.py  db.py  files.py  vacancies.py
