[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vacancies-project"
version = "1.0.0"
description = "Проект для работы с вакансиями с сайта hh.ru"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = ">=2.31.0"
psycopg2 = ">=2.9.7"

[tool.poetry.group.dev.dependencies]
flake8 = ">=6.1.0"
pytest = ">=7.0.0"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".env",
    "build",
    "dist",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache"
]
per-file-ignores = [
    "__init__.py:F401"
]
max-complexity = 10

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
